# linux-top-parser-rs

./: .deepsource.toml  Cargo.toml  README.md
.github/workflows/: manual-release.yml  rust.yml
data/: mulit_all.txt  multi_all_expected.json  multi_expected.json  single_all_cpu_expected.json
examples/: parse_top_output.rs
linux-top-parser-rs/: Cargo.toml
linux-top-parser-rs/examples/: parse_top_output.rs
linux-top-parser-rs/src/parser/: using_nom.rs
src/: lib.rs
src/parser/: common.rs  mod.rs  using_nom.rs
