[package]
name = "linux-top-parser-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nom = "7.1.3"
serde = { version="1.0.193", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4.35"

[dev-dependencies]
rstest = "0.18.2"
pretty_assertions = "1.4.0"
