[package]
name = "linux-top-parser-rs"
version = "0.2.0"
edition = "2021"
description = "A lightweight Rust library for parsing Linux `top` command output into structured data types and JSON."
license = "MIT"
repository = "https://github.com/tim/linux-top-parser-rs"
homepage = "https://github.com/tim/linux-top-parser-rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nom = "8.0.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4.42"
indexmap = { version = "2.12.0", features = ["serde"] }

[dev-dependencies]
rstest = "^0.26.0"
pretty_assertions = "1.4.0"
